fixing supplier role