@@ -2,70 +2,47 @@ package Controller;
 
 import DAO.ASNDAO;
 import model.ASN;
-import java.io.IOException;
-import java.io.PrintWriter;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.http.HttpServlet;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
+import java.io.*;
+import jakarta.servlet.*;
+import jakarta.servlet.http.*;
 import java.sql.SQLException;
 import java.time.LocalDate;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 public class ASNServlet extends HttpServlet {
-
     private ASNDAO asnDAO;
 
     @Override
     public void init() throws ServletException {
-        super.init();
         asnDAO = new ASNDAO();
     }
 
     @Override
-    protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+    protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws IOException, ServletException {
+        resp.setContentType("application/json;charset=UTF-8");
         String action = req.getParameter("action");
-        PrintWriter out = resp.getWriter();
-        resp.setContentType("application/json");
-        resp.setCharacterEncoding("UTF-8");
+        try (PrintWriter out = resp.getWriter()) {
+            if (action == null) action = "getAll";
 
-        try {
-            if (action != null) {
-                switch (action) {
-                    case "getById":
-                        int id = Integer.parseInt(req.getParameter("id"));
-                        Optional<ASN> asn = asnDAO.getASNById(id);
-                        if (asn.isPresent()) {
-                            out.print(convertASNToJson(asn.get()));
-                        } else {
-                            out.print("{\"error\": \"ASN not found\"}");
-                        }
-                        break;
-                    case "getBySupplier":
-                        int supplierId = Integer.parseInt(req.getParameter("supplierId"));
-                        List<ASN> asnsBySupplier = asnDAO.getASNsBySupplierId(supplierId);
-                        out.print(convertASNsToJson(asnsBySupplier));
-                        break;
-                    case "getByStatus":
-                        String status = req.getParameter("status");
-                        List<ASN> asnsByStatus = asnDAO.getASNsByStatus(status);
-                        out.print(convertASNsToJson(asnsByStatus));
-                        break;
-                    case "getPendingApproval":
-                        List<ASN> pendingASNs = asnDAO.getPendingApprovalASNs();
-                        out.print(convertASNsToJson(pendingASNs));
-                        break;
-                    case "getAll":
-                    default:
-                        List<ASN> asns = asnDAO.getAllASNs();
-                        out.print(convertASNsToJson(asns));
-                        break;
+            switch (action) {
+                case "getById" -> {
+                    int id = Integer.parseInt(req.getParameter("id"));
+                    asnDAO.getASNById(id)
+                            .ifPresentOrElse(
+                                    asn -> out.print(convertASNToJson(asn)),
+                                    () -> out.print("{\"error\":\"ASN not found\"}")
+                            );
                 }
-            } else {
-                // Default: get all ASNs
-                List<ASN> asns = asnDAO.getAllASNs();
-                out.print(convertASNsToJson(asns));
+                case "getBySupplier" -> {
+                    int supplierId = Integer.parseInt(req.getParameter("supplierId"));
+                    out.print(convertASNsToJson(asnDAO.getASNsBySupplierId(supplierId)));
+                }
+                case "getByStatus" -> {
+                    String status = req.getParameter("status");
+                    out.print(convertASNsToJson(asnDAO.getASNsByStatus(status)));
+                }
+                case "getPendingApproval" -> out.print(convertASNsToJson(asnDAO.getPendingApprovalASNs()));
+                default -> out.print(convertASNsToJson(asnDAO.getAllASNs()));
             }
         } catch (SQLException e) {
             throw new ServletException(e);
@@ -73,44 +50,24 @@ public class ASNServlet extends HttpServlet {
     }
 
     @Override
-    protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+    protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws IOException, ServletException {
+        resp.setContentType("application/json;charset=UTF-8");
         String action = req.getParameter("action");
-        PrintWriter out = resp.getWriter();
-        resp.setContentType("application/json");
-        resp.setCharacterEncoding("UTF-8");
-
-        try {
-            if (action != null) {
-                switch (action) {
-                    case "create":
-                        createASN(req, out);
-                        break;
-                    case "update":
-                        updateASN(req, out);
-                        break;
-                    case "submitForApproval":
-                        submitForApproval(req, out);
-                        break;
-                    case "approve":
-                        approveASN(req, out);
-                        break;
-                    case "reject":
-                        rejectASN(req, out);
-                        break;
-                    case "updateStatus":
-                        updateASNStatus(req, out);
-                        break;
-                    case "delete":
-                        deleteASN(req, out);
-                        break;
-                    case "createBySupplier":
-                        createASNBySupplier(req, out);
-                        break;
-                    default:
-                        out.print("{\"error\": \"Invalid action\"}");
-                }
-            } else {
-                out.print("{\"error\": \"Action parameter is required\"}");
+        try (PrintWriter out = resp.getWriter()) {
+            if (action == null) {
+                out.print("{\"error\":\"Missing action parameter\"}");
+                return;
+            }
+            switch (action) {
+                case "create" -> createASN(req, out);
+                case "update" -> updateASN(req, out);
+                case "submitForApproval" -> submitForApproval(req, out);
+                case "approve" -> approveASN(req, out);
+                case "reject" -> rejectASN(req, out);
+                case "updateStatus" -> updateASNStatus(req, out);
+                case "delete" -> deleteASN(req, out);
+                case "createBySupplier" -> createASNBySupplier(req, out);
+                default -> out.print("{\"error\":\"Invalid action\"}");
             }
         } catch (SQLException e) {
             throw new ServletException(e);
@@ -119,244 +76,111 @@ public class ASNServlet extends HttpServlet {
 
     private void createASN(HttpServletRequest req, PrintWriter out) throws SQLException {
         ASN asn = new ASN();
-
-        // Required fields
-        asn.setPoId(Integer.parseInt(req.getParameter("poId")));
+      
         asn.setSupplierId(Integer.parseInt(req.getParameter("supplierId")));
         asn.setShipmentDate(LocalDate.parse(req.getParameter("shipmentDate")));
         asn.setCarrier(req.getParameter("carrier"));
         asn.setTrackingNumber(req.getParameter("trackingNumber"));
-
-        // Optional fields
-        String notes = req.getParameter("notes");
-        if (notes != null) {
-            asn.setNotes(notes);
-        }
-
-        // Set default status to DRAFT
+        asn.setNotes(Optional.ofNullable(req.getParameter("notes")).orElse(""));
         asn.setStatus("DRAFT");
 
-        boolean success = asnDAO.addASN(asn);
-        if (success) {
-            out.print("{\"message\": \"ASN created successfully\", \"id\": " + asn.getAsnId()
-                    + ", \"status\": \"DRAFT\"}");
-        } else {
-            out.print("{\"error\": \"Failed to create ASN\"}");
-        }
+        if (asnDAO.addASN(asn))
+            out.print("{\"message\":\"ASN created successfully\",\"id\":" + asn.getAsnId() + "}");
+        else
+            out.print("{\"error\":\"Failed to create ASN\"}");
     }
 
     private void updateASN(HttpServletRequest req, PrintWriter out) throws SQLException {
         int asnId = Integer.parseInt(req.getParameter("asnId"));
-
-        Optional<ASN> optionalASN = asnDAO.getASNById(asnId);
-        if (!optionalASN.isPresent()) {
-            out.print("{\"error\": \"ASN not found\"}");
+        Optional<ASN> opt = asnDAO.getASNById(asnId);
+        if (opt.isEmpty()) {
+            out.print("{\"error\":\"ASN not found\"}");
             return;
         }
-
-        ASN asn = optionalASN.get();
-
-        // Only allow updates if status is DRAFT
+        ASN asn = opt.get();
         if (!asn.isDraft()) {
-            out.print("{\"error\": \"Can only update ASN in DRAFT status. Current status: " + asn.getStatus() + "\"}");
+            out.print("{\"error\":\"Only DRAFT ASNs can be updated\"}");
             return;
         }
 
-        // Update fields if provided
-        if (req.getParameter("poId") != null) {
-            asn.setPoId(Integer.parseInt(req.getParameter("poId")));
-        }
-        if (req.getParameter("shipmentDate") != null) {
+        if (req.getParameter("shipmentDate") != null)
             asn.setShipmentDate(LocalDate.parse(req.getParameter("shipmentDate")));
-        }
-        if (req.getParameter("carrier") != null) {
-            asn.setCarrier(req.getParameter("carrier"));
-        }
-        if (req.getParameter("trackingNumber") != null) {
-            asn.setTrackingNumber(req.getParameter("trackingNumber"));
-        }
-        if (req.getParameter("notes") != null) {
-            asn.setNotes(req.getParameter("notes"));
-        }
+        asn.setCarrier(Optional.ofNullable(req.getParameter("carrier")).orElse(asn.getCarrier()));
+        asn.setTrackingNumber(Optional.ofNullable(req.getParameter("trackingNumber")).orElse(asn.getTrackingNumber()));
+        asn.setNotes(Optional.ofNullable(req.getParameter("notes")).orElse(asn.getNotes()));
 
-        boolean success = asnDAO.updateASN(asn);
-        if (success) {
-            out.print("{\"message\": \"ASN updated successfully\"}");
-        } else {
-            out.print("{\"error\": \"Failed to update ASN\"}");
-        }
+        out.print(asnDAO.updateASN(asn)
+                ? "{\"message\":\"ASN updated successfully\"}"
+                : "{\"error\":\"Update failed\"}");
     }
 
     private void submitForApproval(HttpServletRequest req, PrintWriter out) throws SQLException {
-        int asnId = Integer.parseInt(req.getParameter("asnId"));
-        String submittedBy = req.getParameter("submittedBy"); // Supplier username
-
-        // Check if ASN exists and can be submitted
-        Optional<ASN> optionalASN = asnDAO.getASNById(asnId);
-        if (!optionalASN.isPresent()) {
-            out.print("{\"error\": \"ASN not found\"}");
+        int id = Integer.parseInt(req.getParameter("asnId"));
+        String submittedBy = req.getParameter("submittedBy");
+        Optional<ASN> opt = asnDAO.getASNById(id);
+        if (opt.isEmpty()) {
+            out.print("{\"error\":\"ASN not found\"}");
             return;
         }
-
-        ASN asn = optionalASN.get();
+        ASN asn = opt.get();
         if (!asn.canBeSubmitted()) {
-            out.print("{\"error\": \"ASN cannot be submitted for approval. Current status: " + asn.getStatus() + "\"}");
+            out.print("{\"error\":\"ASN not in DRAFT status\"}");
             return;
         }
-
-        boolean success = asnDAO.submitForApproval(asnId, submittedBy);
-        if (success) {
-            out.print("{\"message\": \"ASN submitted for manager approval\", \"status\": \"PENDING_APPROVAL\"}");
-        } else {
-            out.print("{\"error\": \"Failed to submit ASN for approval\"}");
-        }
+        out.print(asnDAO.submitForApproval(id, submittedBy)
+                ? "{\"message\":\"ASN submitted for approval\"}"
+                : "{\"error\":\"Submit failed\"}");
     }
 
     private void approveASN(HttpServletRequest req, PrintWriter out) throws SQLException {
-        int asnId = Integer.parseInt(req.getParameter("asnId"));
-        String approvedBy = req.getParameter("approvedBy"); // Manager username
-
-        // Check if ASN exists and can be approved
-        Optional<ASN> optionalASN = asnDAO.getASNById(asnId);
-        if (!optionalASN.isPresent()) {
-            out.print("{\"error\": \"ASN not found\"}");
-            return;
-        }
-
-        ASN asn = optionalASN.get();
-        if (!asn.canBeApproved()) {
-            out.print("{\"error\": \"ASN cannot be approved. Current status: " + asn.getStatus() + "\"}");
-            return;
-        }
-
-        boolean success = asnDAO.approveASN(asnId, approvedBy);
-        if (success) {
-            out.print(
-                    "{\"message\": \"ASN approved successfully. Supplier can now ship the goods.\", \"status\": \"APPROVED\"}");
-        } else {
-            out.print("{\"error\": \"Failed to approve ASN\"}");
-        }
+        int id = Integer.parseInt(req.getParameter("asnId"));
+        String approvedBy = req.getParameter("approvedBy");
+        out.print(asnDAO.approveASN(id, approvedBy)
+                ? "{\"message\":\"ASN approved\"}"
+                : "{\"error\":\"Approval failed\"}");
     }
 
     private void rejectASN(HttpServletRequest req, PrintWriter out) throws SQLException {
-        int asnId = Integer.parseInt(req.getParameter("asnId"));
-        String rejectedBy = req.getParameter("rejectedBy"); // Manager username
-        String rejectionReason = req.getParameter("rejectionReason");
-
-        if (rejectionReason == null || rejectionReason.trim().isEmpty()) {
-            out.print("{\"error\": \"Rejection reason is required\"}");
+        int id = Integer.parseInt(req.getParameter("asnId"));
+        String reason = req.getParameter("rejectionReason");
+        String by = req.getParameter("rejectedBy");
+        if (reason == null || reason.isBlank()) {
+            out.print("{\"error\":\"Rejection reason required\"}");
             return;
         }
-
-        // Check if ASN exists and can be rejected
-        Optional<ASN> optionalASN = asnDAO.getASNById(asnId);
-        if (!optionalASN.isPresent()) {
-            out.print("{\"error\": \"ASN not found\"}");
-            return;
-        }
-
-        ASN asn = optionalASN.get();
-        if (!asn.canBeRejected()) {
-            out.print("{\"error\": \"ASN cannot be rejected. Current status: " + asn.getStatus() + "\"}");
-            return;
-        }
-
-        boolean success = asnDAO.rejectASN(asnId, rejectedBy, rejectionReason);
-        if (success) {
-            out.print("{\"message\": \"ASN rejected\", \"status\": \"REJECTED\"}");
-        } else {
-            out.print("{\"error\": \"Failed to reject ASN\"}");
-        }
+        out.print(asnDAO.rejectASN(id, by, reason)
+                ? "{\"message\":\"ASN rejected\"}"
+                : "{\"error\":\"Rejection failed\"}");
     }
 
     private void updateASNStatus(HttpServletRequest req, PrintWriter out) throws SQLException {
-        int asnId = Integer.parseInt(req.getParameter("asnId"));
+        int id = Integer.parseInt(req.getParameter("asnId"));
         String status = req.getParameter("status");
-
-        if (status == null || status.trim().isEmpty()) {
-            out.print("{\"error\": \"Status is required\"}");
-            return;
-        }
-
-        boolean success = asnDAO.updateASNStatus(asnId, status);
-        if (success) {
-            out.print("{\"message\": \"ASN status updated\", \"status\": \"" + status + "\"}");
-        } else {
-            out.print("{\"error\": \"Failed to update ASN status\"}");
-        }
+        out.print(asnDAO.updateASNStatus(id, status)
+                ? "{\"message\":\"Status updated\"}"
+                : "{\"error\":\"Failed to update status\"}");
     }
 
     private void deleteASN(HttpServletRequest req, PrintWriter out) throws SQLException {
-        int asnId = Integer.parseInt(req.getParameter("asnId"));
-
-        // Check if ASN exists and is in DRAFT status (only allow deletion of drafts)
-        Optional<ASN> optionalASN = asnDAO.getASNById(asnId);
-        if (!optionalASN.isPresent()) {
-            out.print("{\"error\": \"ASN not found\"}");
+        int id = Integer.parseInt(req.getParameter("asnId"));
+        Optional<ASN> opt = asnDAO.getASNById(id);
+        if (opt.isEmpty() || !opt.get().isDraft()) {
+            out.print("{\"error\":\"Only DRAFT ASN can be deleted\"}");
             return;
         }
-
-        ASN asn = optionalASN.get();
-        if (!asn.isDraft()) {
-            out.print("{\"error\": \"Can only delete ASN in DRAFT status. Current status: " + asn.getStatus() + "\"}");
-            return;
-        }
-
-        boolean success = asnDAO.deleteASN(asnId);
-        if (success) {
-            out.print("{\"message\": \"ASN deleted successfully\"}");
-        } else {
-            out.print("{\"error\": \"Failed to delete ASN\"}");
-        }
-    }
-
-    // Helper methods to convert to JSON manually
-    private String convertASNToJson(ASN asn) {
-        StringBuilder json = new StringBuilder();
-        json.append("{");
-        json.append("\"asnId\":").append(asn.getAsnId()).append(",");
-        json.append("\"poId\":").append(asn.getPoId()).append(",");
-        json.append("\"supplierId\":").append(asn.getSupplierId()).append(",");
-        json.append("\"shipmentDate\":\"").append(asn.getShipmentDate()).append("\",");
-        json.append("\"carrier\":\"").append(escapeJson(asn.getCarrier())).append("\",");
-        json.append("\"trackingNumber\":\"").append(escapeJson(asn.getTrackingNumber())).append("\",");
-        json.append("\"status\":\"").append(escapeJson(asn.getStatus())).append("\",");
-        json.append("\"notes\":\"").append(escapeJson(asn.getNotes())).append("\",");
-        json.append("\"submittedBy\":\"").append(escapeJson(asn.getSubmittedBy())).append("\",");
-        json.append("\"approvedBy\":\"").append(escapeJson(asn.getApprovedBy())).append("\",");
-        json.append("\"submittedAt\":\"").append(asn.getSubmittedAt()).append("\",");
-        json.append("\"approvedAt\":\"").append(asn.getApprovedAt()).append("\",");
-        json.append("\"rejectionReason\":\"").append(escapeJson(asn.getRejectionReason())).append("\",");
-        json.append("\"createdAt\":\"").append(asn.getCreatedAt()).append("\",");
-        json.append("\"updatedAt\":\"").append(asn.getUpdatedAt()).append("\"");
-        json.append("}");
-        return json.toString();
-    }
-
-    private String convertASNsToJson(List<ASN> asns) {
-        StringBuilder json = new StringBuilder();
-        json.append("[");
-        for (int i = 0; i < asns.size(); i++) {
-            json.append(convertASNToJson(asns.get(i)));
-            if (i < asns.size() - 1) {
-                json.append(",");
-            }
-        }
-        json.append("]");
-        return json.toString();
+        out.print(asnDAO.deleteASN(id)
+                ? "{\"message\":\"ASN deleted\"}"
+                : "{\"error\":\"Delete failed\"}");
     }
 
     private void createASNBySupplier(HttpServletRequest req, PrintWriter out) throws SQLException {
-        // Lấy supplierId từ session (sau khi đăng nhập)
         Integer supplierId = (Integer) req.getSession().getAttribute("supplierId");
-
         if (supplierId == null) {
-            out.print("{\"error\": \"Unauthorized. Please login as supplier.\"}");
+            out.print("{\"error\":\"Unauthorized supplier\"}");
             return;
         }
-
         ASN asn = new ASN();
-        asn.setSupplierId(supplierId); // tự động gán supplierId từ session
+        asn.setSupplierId(supplierId);
         asn.setPoId(Integer.parseInt(req.getParameter("poId")));
         asn.setShipmentDate(LocalDate.parse(req.getParameter("shipmentDate")));
         asn.setCarrier(req.getParameter("carrier"));
@@ -364,24 +188,24 @@ public class ASNServlet extends HttpServlet {
         asn.setNotes(req.getParameter("notes"));
         asn.setStatus("DRAFT");
 
-        boolean success = asnDAO.addASN(asn);
-        if (success) {
-            out.print("{\"message\": \"ASN created successfully by supplier\", \"asnId\": " + asn.getAsnId() + "}");
-        } else {
-            out.print("{\"error\": \"Failed to create ASN\"}");
-        }
+        out.print(asnDAO.addASN(asn)
+                ? "{\"message\":\"ASN created by supplier\",\"asnId\":" + asn.getAsnId() + "}"
+                : "{\"error\":\"Failed to create ASN\"}");
     }
 
-    private String escapeJson(String value) {
-        if (value == null) {
-            return "";
-        }
-        return value.replace("\\", "\\\\")
-                .replace("\"", "\\\"")
-                .replace("\b", "\\b")
-                .replace("\f", "\\f")
-                .replace("\n", "\\n")
-                .replace("\r", "\\r")
-                .replace("\t", "\\t");
+    private String convertASNToJson(ASN a) {
+        return String.format(Locale.US,
+                "{\"asnId\":%d,\"poId\":%d,\"supplierId\":%d,\"shipmentDate\":\"%s\",\"carrier\":\"%s\",\"trackingNumber\":\"%s\",\"status\":\"%s\",\"notes\":\"%s\"}",
+                a.getAsnId(), a.getPoId(), a.getSupplierId(),
+                a.getShipmentDate(), escape(a.getCarrier()), escape(a.getTrackingNumber()),
+                escape(a.getStatus()), escape(a.getNotes()));
+    }
+
+    private String convertASNsToJson(List<ASN> list) {
+        return "[" + list.stream().map(this::convertASNToJson).reduce((a, b) -> a + "," + b).orElse("") + "]";
+    }
+
+    private String escape(String s) {
+        return s == null ? "" : s.replace("\"", "\\\"");
     }
 }
